# vkvisualize

./: .gitignore  README.md  main.c
gl/: Makefile  compile_commands.json
gl/src/: glad.c  (+5 more)
odin/: ols.json.backup
rust-wgpu/: Cargo.toml  build.rs
rust-wgpu/assets/shaders/: pcl.wgsl  shader.wgsl
rust-wgpu/src/: app.rs  graphics.rs  k4a.rs  lib.rs  main.rs  streams.rs  texture.rs
rust-wgpu/src/Log/: OrbbecSDK.log.txt
vk/: Makefile
vulkan-video-rs/: Cargo.toml  README.md
vulkan-video-rs/assets/shaders/: mesh.frag  mesh.vert  pcl.frag  pcl.vert  special_mesh.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
vulkan-video-rs/assets/shaders/utils/: camera.glsl  common.glsl
vulkan-video-rs/crates/comptime-register-macro/: Cargo.toml
vulkan-video-rs/crates/comptime-register-macro/src/: lib.rs
vulkan-video-rs/examples/: ash_examples.rs  main.rs
vulkan-video-rs/src/: main.rs  mesh.rs  shader.rs  shader_utils.rs  vk_base.rs  vk_bundles.rs  vk_utils.rs
vulkan-video-rs/src/devices/: mod.rs  record_player.rs
vulkan-video-rs/src/drawable/: drawable2d.rs  drawable_common.rs  drawable_mesh.rs  drawable_tex.rs  mod.rs
vulkan-video-rs/src/geometry/: mat4.rs  mod.rs  vec3.rs  vec4.rs
vulkan-video-rs/src/mesh/: cube.rs  mesh.rs  mod.rs  prism.rs  rect.rs
vulkan-video-rs/src/primitives/: texture2d.rs
vulkan-video-rs/src/rhi/: allocator.rs  core.rs  mod.rs
vulkan-video-rs/src/scene/: camera.rs
vulkan-video-rs/src/scene_extensions/: simple_scene.rs
vulkan-video-rs/src/utils/: buffer.rs  colours.rs  common.rs  image.rs  keyboard.rs  mod.rs
(+39 files in other folders)
