[package]
name = "rust-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
k4a-orbbec-sys = { path="./third_party/k4a-orbbec-sys"}
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.4.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18.0"
