[package]
name = "vulkan-video-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
comptime-register-macro = { path = "./crates/comptime-register-macro" }
anyhow = "1.0.98"
ash = { version = "0.38.0", features = ["linked", "debug", "std"] }
ash-window = "0.13.0"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9.1"
rng = "0.1.0"
simple_logger = "5.0.0"
uuid = { version = "1.18.1", features = ["v4"] }
winit = { version = "0.29", features = ["rwh_06"] }
